# AFQ-Insight

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGES.rst  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.rst  afq_feature_selection_with_random_forests.ipynb  afq_random_forest_classification.ipynb  afq_random_forest_regression.ipynb  afq_transform.py  api.html  contributing.html  dev_pipeline.ipynb  feature-prep.ipynb  genindex.html  getting_help.html  index.html  install.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user_guide.html  weights.hdf5
.github/: CONTRIBUTING.md  config.yml
.github/workflows/: docbuild.yml  publish-to-test-pypi.yml  test.yml
.maintenance/: publish_release.sh  update_zenodo.py
_downloads/1515fb8d41d5867af5fb33aeccec07c7/: plot_als_classification.ipynb
_downloads/59b2ef974e8631cfc6f5cd750f2eebbd/: plot_hbn_site_profiles.ipynb
_downloads/6a6315e3014f9f8f9bcdf1902816b205/: plot_als_classification.py
_downloads/6c0234fab29c2b3dc2b87ddc4fbcc42d/: plot_age_regression.ipynb
_downloads/85ca7ddf2812ce2eb4eb341a2045be18/: plot_age_regression.py
_downloads/88f5a0bc7b07929bd000246bfdd1402a/: demo_afq_dataset.ipynb
_modules/: index.html
_modules/afqinsight/: cross_validate.html  datasets.html  insight.html  pipeline.html  transform.html
_sources/: getting_help.rst.txt  index.rst.txt  install.rst.txt  user_guide.rst.txt
_sources/auto_examples/: demo_afq_dataset.rst.txt  index.rst.txt  plot_age_regression.rst.txt  plot_als_classification.rst.txt  plot_hbn_site_profiles.rst.txt  sg_execution_times.rst.txt
afqinsight/: __init__.py  _serial_bagging.py  augmentation.py  cnn.py  cross_validate.py  datasets.py  forests.py  h5io.py  insight.py  logistic_sgl.py  match.py  parametric.py  pipeline.py  plot.py  prox.py  sgl.py  sgl_estimators.py  transform.py  utils.py  version.py
afqinsight/augmentation/: __init__.py  augmentation.py  dtw.py
afqinsight/nn/: tf_models.py
afqinsight/tests/: test_augmentation.py  test_bagging.py  test_cnn.py  test_cross_validate.py  test_datasets.py  test_h5io.py  test_insight.py  test_match.py  test_pipelines.py  test_prox.py  test_sgl.py  test_sgl_estimators.py  test_transform.py  test_utils.py
afqinsight/tools/: tractutils.py
auto_examples/: demo_afq_dataset.html  index.html  plot_age_regression.html  plot_als_classification.html  plot_hbn_site_profiles.html  sg_execution_times.html
data/: subjects.csv
doc/: Makefile  api.rst  conf.py  contributing.rst  index.rst  install.rst  user_guide.rst
examples/: afq_random_forest_classification.ipynb  afq_random_forest_regression.ipynb  als_classification.ipynb  demo_afq_dataset.py  exploring_the_afqinsight_api.ipynb  plot_age_regression.py  plot_als_classification.py  plot_als_comparison.py  plot_hbn_site_profiles.py
examples/preprint-notebooks/: 00_als_classify.ipynb  01_age_regression-from-demo-data.ipynb  02_plot_als_tract_profiles.ipynb  Dockerfile  Makefile  README.md  environment.yml  get_data.py
sandbox/: dev_pipeline.ipynb  feature-prep.ipynb
sandbox/aws_notebooks/: keras_sgl_test_afq.ipynb  keras_sgl_test_classification.ipynb
untitled_project/: oracle.json
untitled_project/trial_003e571aa7c378c9c838c13caa85e7b5/: trial.json
untitled_project/trial_00b843a758c735db1b28c8fec656972a/: trial.json
(+53 files in other folders)
