[aliases]
test = pytest

[tool:pytest]
addopts = --doctest-modules

[metadata]
name = afqinsight
url = https://richford.github.io/AFQ-Insight
download_url = https://github.com/richford/AFQ-Insight
author = Adam Richie-Halford
author_email = richiehalford@gmail.com
maintainer = Adam Richie-Halford
maintainer_email = richiehalford@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = AFQ-Insight: Statistical Learning for Tractometry
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
    setuptools_scm
python_requires = >=3.7
install_requires =
    dipy>=1.0.0
    groupyr>=0.3.1
    matplotlib
    numpy
    pandas>=1.1.0
    requests
    seaborn
    scikit-learn>=1.0.0
    sklearn_pandas>=2.0.0
    tables>=3.0.0
    tqdm
    statsmodels
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
torch =
    torch
tf =
    tensorflow
    keras-tuner
dev =
    black
    flake8
    matplotlib
    neurocombat-sklearn
    numpydoc
    pre-commit
    pydocstyle
    pytest-cov
    pytest-xdist[psutil]
    pytest
    s3fs
    scipy<=1.7.3
    sphinx
    sphinx-gallery
    sphinx-panels
    sphinx-rtd-theme
    tox
    typing-extensions>=3.10.0.0
maint =
    rapidfuzz

all =
    %(torch)s
    %(tf)s
    %(dev)s
    %(maint)s

[pydocstyle]
convention = numpy
match-dir = afqinsight
